--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.alarmsystem"
+        applicationId "com.example.crazyalarm"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
