--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     implementation "com.android.support:support-compat:28.0.0"
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.crystal:crystalrangeseekbar:1.1.3'
 }
+apply plugin: 'com.google.gms.google-services'
